Fixed up images width and alignment, as well as text alignment

--- a/web/app/themes/theagsc/assets/styles/layouts/_keller.less
+++ b/web/app/themes/theagsc/assets/styles/layouts/_keller.less
@@ -1,4 +1,4 @@
-body {text-align: center;}
+body.keller {text-align: center;}
 
 .page-template-template-keller {
 
@@ -18,8 +18,8 @@ body {text-align: center;}
 
   p {
     color:@keller-black;
-    text-align:
-    left; padding:0 10px;
+    text-align:left;
+    padding:0 10px;
     font-size: 1.35em;
     line-height: 1.35em;
     @media@sm {
